static/resiliency-testing-with-litmus/olric.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: olricd
  name: olricd
spec:
  selector:
    matchLabels:
      app: olricd
  replicas: 3
  template:
    metadata:
      labels:
        app: olricd
    spec:
      containers:
        - name: olricd
          image: olricio/olric-cloud-plugin:v0.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3320
            - containerPort: 3322
          volumeMounts:
            - name: olricd-config-volume
              mountPath: /etc/olricd
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: olricd-config-volume
          configMap:
            name: olricd-config
            items:
              - key: olricd.yaml
                path: olricd.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memberlist
spec:
  selector:
    app: olricd
  clusterIP: None
  ports:
    - port: 3322
      protocol: TCP
      targetPort: 3322
---
apiVersion: v1
kind: Service
metadata:
  name: olricd
spec:
  type: LoadBalancer
  selector:
    app: olricd
  ports:
    - port: 3320
      protocol: TCP
      targetPort: 3320
