static/resiliency-testing-with-litmus/olric-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olric
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
    - host: lvh.me
      tcp:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9
